test/TestPhases/typechecker/valid/diamondimport_2.blc
import c "../imports/client_2" // imports service itself
import s "../imports/service"

@[EntryPoint]
activity Main ()
    await true
end