test/TestPhases/typechecker/invalid/returnReceiverForVoid.blc
activity VoidReturn ()
    await true
end

@[EntryPoint]
activity Main () ()
    return run VoidReturn()
end